@@ -253,3 +253,4 @@ Fixes:
     * Edje: Fix useless ecore_imf_context_reset call in case of pressing ESC and Return key
     * Edje: When selected word exists, selection is cleared and cursor remains on the current entry by additional key input.
     * Ecore-X: Fix selection parser to not overrun buffer read by using longs on 64bit.
+    * Evas: Fix recursive proxy image rendering to just render black
